--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -13,7 +13,7 @@ node {
 
     stage "Build"
     
-        sh "docker build -t ${imageName} ${appName}"
+        sh "docker build -t ${imageName} ."
     
     stage "Push"
 
