--- a/applications/mean-k8s/helm-chart/templates/deployment.yaml
+++ b/applications/mean-k8s/helm-chart/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         fsGroup: 1001
       containers:
       - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | toString }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
         - name: MONGODB_HOST
