add helm init to jenkinsfile

--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -23,6 +23,8 @@ node {
 
     stage "Deploy"
 
+        sh """helm init --force-upgrade"""
+
         sh """
             helm upgrade --install \
                 --set-string image.repository=${registryHost}${appName},image.tag=${tag} ${appName} applications/${appName}/helm-chart/
