add helm init to jenkinsfile

--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -23,7 +23,7 @@ node {
 
     stage "Deploy"
 
-        sh """helm init --force-upgrade"""
+        sh """helm version"""
 
         sh """
             helm upgrade --install \
