add helm init to jenkinsfile

--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -23,6 +23,8 @@ node {
 
     stage "Deploy"
 
+        sh """ helm init --client-only --force-upgrade"""
+
         sh """helm version"""
 
         sh """
