add helm init to jenkinsfile

--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -5,7 +5,7 @@ node {
     
     sh "git rev-parse --short HEAD > commit-id"
 
-    tag = readFile('commit-id').replace("\n", "").replace("\r", "")
+    tag = "v"+readFile('commit-id').replace("\n", "").replace("\r", "")
     appName = "mean-k8s"
     registryHost = "127.0.0.1:30400/"
     imageName = "${registryHost}${appName}:${tag}"
@@ -13,9 +13,7 @@ node {
 
     stage "Build"
     
-
         sh "docker build -t ${imageName} -f applications/${appName}/Dockerfile applications/${appName}"
-
     
     stage "Push"
 
@@ -23,12 +21,8 @@ node {
 
     stage "Deploy"
 
-        sh """ helm init --client-only --force-upgrade"""
-
-        sh """helm version"""
-
         sh """
             helm upgrade --install \
-                --set-string image.repository=${registryHost}${appName},image.tag=${tag} ${appName} applications/${appName}/helm-chart/
+                --set image.repository=${registryHost}${appName},image.tag=${tag} ${appName} applications/${appName}/helm-chart/
         """
 }
