--- a/applications/mean-k8s/Jenkinsfile
+++ b/applications/mean-k8s/Jenkinsfile
@@ -13,13 +13,17 @@ node {
 
     stage "Build"
     
+
         sh "docker build -t ${imageName} -f applications/${appName}/Dockerfile applications/${appName}"
+
     
     stage "Push"
 
         sh "docker push ${imageName}"
 
     stage "Deploy"
+
+        sh """helm init --client-only"""
 
         sh """
             helm upgrade --install \
