--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kubernetes-ci-cd",
+  "name": "kubernetes-helm-jenkins-ci-cd",
   "version": "1.0.0",
-  "description": "## Get started Requirements * nodejs * kubectl * virtualbox * minikube * At least 4GB of available memory, 8GB for part 5",
+  "description": "POC",
   "main": "start.js",
   "dependencies": {
     "cmdify": "^0.0.4",
@@ -13,21 +13,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "echo 'Begin the current interactive tutorial by executing: npm run <part> where <part> can be part1, part2, part3 or part4'",
-    "part1": "node start.js part1.yml",
-    "part2": "node start.js part2.yml",
-    "part3": "node start.js part3.yml",
-    "part4": "node start.js part4.yml"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kenzanlabs/kubernetes-ci-cd.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kenzanlabs/kubernetes-ci-cd/issues"
-  },
-  "homepage": "https://github.com/kenzanlabs/kubernetes-ci-cd#readme"
+    "poc": "node start.js poc.yml"
+  }
 }
